--- a/public/index.html
+++ b/public/index.html
@@ -1,60 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Hello World!</title>
-
-	<meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0" />
-
+	
+	<title>Viewporter enabled</title>
+	
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-	<script src="scripts/lib/viewporter/src/viewporter.js"></script>
 
-	<script data-main="scripts/main" src="scripts/require.js"></script>
+	<!-- This exact meta viewport is required for Viewporter for work properly -->
+	<meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0" />
+	
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
 
-	<script src="scripts/lib/jquery-1.10.2.js"></script>
-	<script>
-		function loadScript( url, callback ) {
-			  var script = document.createElement( "script" )
-			  script.type = "text/javascript";
-			  if(script.readyState) {  //IE
-			    script.onreadystatechange = function() {
-			      if ( script.readyState === "loaded" || script.readyState === "complete" ) {
-			        script.onreadystatechange = null;
-			        callback();
-			      }
-			    };
-			  } else {  //Others
-			    script.onload = function() {
-			      callback();
-			    };
-			  }
+	<!-- important files (non-optional) -->
+	<script src="scripts/lib/viewporter/src/viewporter.js"></script>
 
-			  script.src = url;
-			  document.getElementsByTagName( "head" )[0].appendChild( script );
-			}
-
-
-		// call the function...
-		loadScript("scripts/lib/debug.js", function() {
-		  console.log('script ready!'); 
-		});		
-	</script>
+	<!-- the following two are optional, and just for this demo -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script src="scripts/lib/debug.js"></script>
+	
 </head>
-
 <body>
-	<div id="viewporter">
-    	
-    	<div id="checker-bl">
-			<p><strong>window width:</strong> <span id="viewporter-debug-width"></span></p>
-			<p><strong>window height:</strong> <span id="viewporter-debug-height"></span></p>
-		</div>
-		<div id="checker-tr">
-			<p><strong>user agent:</strong> <span id="viewporter-debug-useragent"></span></p>
-		</div>
+<div id="viewporter"><!-- This wrapper element is also required -->
 
+	<div id="checker-bl">
+		<p><strong>window width:</strong> <span id="viewporter-debug-width"></span></p>
+		<p><strong>window height:</strong> <span id="viewporter-debug-height"></span></p>
+	</div>
+	<div id="checker-tr">
+		<p><strong>user agent:</strong> <span id="viewporter-debug-useragent"></span></p>
 	</div>
 
+</div>
 </body>
 </html>
