--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
 
 	<!-- important files (non-optional) -->
-	<script src="scripts/lib/viewporter/src/viewporter.js"></script>
+	<script src="scripts/lib/viewporter.js"></script>
 
 	<!-- the following two are optional, and just for this demo -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script src="scripts/lib/debug.js"></script>
+	<script src="scripts/debug.js"></script>
 	
 </head>
 <body>
